crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_4.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
export function App() {
	const Header = qrl(() => import("./test.tsx_App_Header_PzePpx0uX0Y"), "App_Header_PzePpx0uX0Y");
	return Header;
}

============================= test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ.tsx (ENTRY POINT) ==
export const App_Header_component_div_onClick_aO7uI7Iw6oQ = (ctx) => console.log(ctx);

/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "entry": null,
  "displayName": "test.tsx_App_Header_component_div_onClick",
  "hash": "aO7uI7Iw6oQ",
  "canonicalFilename": "test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "path": "",
  "extension": "tsx",
  "parent": "App_Header_PzePpx0uX0Y",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    160,
    188
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
============================= test.tsx_App_Header_PzePpx0uX0Y.tsx (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const App_Header_PzePpx0uX0Y = () => {
		console.log("mount");
		return (
			<div onClick={$((ctx) => console.log(ctx))}/>
		);
	};
/*
{
  "origin": "test.tsx",
  "name": "App_Header_PzePpx0uX0Y",
  "entry": null,
  "displayName": "test.tsx_App_Header",
  "hash": "PzePpx0uX0Y",
  "canonicalFilename": "test.tsx_App_Header_PzePpx0uX0Y",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    200
  ]
}
*/
== DIAGNOSTICS ==
[]
