crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_8.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
const q_Header_component_J4uyIhaBNR4 = /*#__PURE__*/ qrl(() => import("./test.tsx_Header_component_J4uyIhaBNR4"), "Header_component_J4uyIhaBNR4");
const q_Header_component_1_2B8d0oH9ZWc = /*#__PURE__*/ qrl(() => import("./test.tsx_Header_component_1_2B8d0oH9ZWc"), "Header_component_1_2B8d0oH9ZWc");
export const Header = /*#__PURE__*/ componentQrl(q_Header_component_1_2B8d0oH9ZWc);

============================= test.tsx_Header_component_1_2B8d0oH9ZWc.tsx (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { Header } from "./test";
export const Header_component_1_2B8d0oH9ZWc = () => {
	return $((hola) => {
		const hola = this;
		const {something, styff} = hola;
		const hello = hola.nothere.stuff[global];
		return (
			<Header/>
		);
	});
};
/*
{
  "origin": "test.tsx",
  "name": "Header_component_1_2B8d0oH9ZWc",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "2B8d0oH9ZWc",
  "canonicalFilename": "test.tsx_Header_component_1_2B8d0oH9ZWc",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    249
  ]
}
*/
============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT) ==
import { Header } from "./test";
export const Header_component_J4uyIhaBNR4 = (hola) => {
		const hola = this;
		const {something, styff} = hola;
		const hello = hola.nothere.stuff[global];
		return (
			<Header/>
		);
	};
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_1_2B8d0oH9ZWc",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    99,
    245
  ],
  "paramNames": [
    "hola"
  ]
}
*/
== DIAGNOSTICS ==
[]
