crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_9.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 842
expression: output
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q_Header_WjUaUQN7Oxg = /*#__PURE__*/ qrl(() => import("./test.tsx_Header_WjUaUQN7Oxg"), "Header_WjUaUQN7Oxg");
const Header = q_Header_WjUaUQN7Oxg;

============================= test.tsx_Header_WjUaUQN7Oxg.tsx (ENTRY POINT) ==
export const Header_WjUaUQN7Oxg = (decl1, { decl2 }, [decl3]) => {
	const { decl4, key: decl5 } = this;
	let [decl6, ...decl7] = stuff;
	const decl8 = 1, decl9;
	function decl10(decl11, { decl12 }, [decl13]) {}
	class decl14 {
		method(decl15, { decl16 }, [decl17]) {}
	}
	try {} catch (decl18) {}
	try {} catch ({ decl19 }) {}
};

/*
{
  "origin": "test.tsx",
  "name": "Header_WjUaUQN7Oxg",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WjUaUQN7Oxg",
  "canonicalFilename": "test.tsx_Header_WjUaUQN7Oxg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    64,
    344
  ],
  "paramNames": [
    "decl1",
    "decl2",
    "decl3"
  ]
}
*/
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "sourceError",
    "code": null,
    "file": "test.tsx",
    "message": "Missing initializer in const declaration"
  }
]
