crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_build_server.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore, isDev, isServer as isServer2 } from "@qwik.dev/core";
import { isServer, isBrowser as isb } from "@qwik.dev/core/build";
import { mongodb } from "mondodb";
import { threejs } from "threejs";
import L from "leaflet";
const q_s_u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "s_u6BtPnK76q4");
export const functionThatNeedsWindow = () => {
	if (false) {
		console.log("l", L);
		console.log("hey");
		window.alert("hey");
	}
};
export const App = qrl(() => import("./test.tsx_App_component_ckEPmXZlub0"), "s_ckEPmXZlub0");

============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT) ==
import { mongodb } from "mondodb";
import { threejs } from "threejs";
export const s_ckEPmXZlub0 = () => {
	useMount$(() => {
		if (isServer) {
			console.log('server', mongodb());
		}
		if (isb) {
			console.log('browser', new threejs());
		}
	});
	return (
		<Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "s_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    411,
    663
  ]
}
*/
== DIAGNOSTICS ==
[]
