crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_capture_imports.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { component$, useStyles$ } from "@qwik.dev/core";
import css1 from "./global.css";
import css2 from "./style.css";
import css3 from "./style.css";
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(() => import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);

============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
import { default as css1 } from "./global.css";
import { useStyles$ } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = () => {
	useStyles$(`${css1}${css2}`);
	useStyles$(css3);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    175,
    246
  ]
}
*/
== DIAGNOSTICS ==
[]
