crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_capturing_fn_class.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const App = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const _u6BtPnK76q4 = () => {
	function hola() {
		console.log('hola');
	}
	class Thing {}
	class Other {}

	return $(() => {
		hola();
		new Thing();
		return (
			<div></div>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    69,
    246
  ]
}
*/
============================= test.tsx_component_ZUK1E201Ins.js (ENTRY POINT) ==
export const component_ZUK1E201Ins = () => {
		hola();
		new Thing();
		return (
			<div></div>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "js",
  "parent": "_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    174,
    242
  ]
}
*/
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'Thing' can not be used inside a Qrl($) scope because it's a function"
  },
  {
    "scope": "optimizer",
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'hola' can not be used inside a Qrl($) scope because it's a function"
  }
]
