crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_class_name.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
export const App2 = qrl(() => import("./test.tsx_App2_TBMHRgb2wi0.tsx"), "App2_TBMHRgb2wi0");

============================= test.tsx_App2_TBMHRgb2wi0.js (ENTRY POINT) ==
export const App2_TBMHRgb2wi0 = () => {
	const signal = useSignal();
	const computed = signal.value + 'foo';
	return (
		<>
			<div className="hola"></div>
			<div className={signal.value}></div>
			<div className={signal}></div>
			<div className={computed}></div>

			<Foo className="hola"></Foo>
			<Foo className={signal.value}></Foo>
			<Foo className={signal}></Foo>
			<Foo className={computed}></Foo>
		</>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "App2_TBMHRgb2wi0",
  "entry": null,
  "displayName": "test.tsx_App2",
  "hash": "TBMHRgb2wi0",
  "canonicalFilename": "test.tsx_App2_TBMHRgb2wi0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    67,
    467
  ]
}
*/
== DIAGNOSTICS ==
[]
