crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_component_with_event_listeners_inside_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$, useStore, useSignal } from "@qwik.dev/core";
export const App = qrl(() => import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");

============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = () => {
      const cart = useStore<string[]>([]);
      const results = useSignal(['foo']);
      function loopArrowFn(results: string[]) {
        return results.map((item) => (
          <span
            onClick$={() => {
              cart.push(item);
            }}
          >
            {item}
          </span>
        ));
      }
      function loopForI(results: string[]) {
        const items = [];
        for (let i = 0; i < results.length; i++) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[i]);
              }}
            >
              {results[i]}
            </span>
          );
        }
        return items;
      }
      function loopForOf(results: string[]) {
        const items = [];
        for (const item of results) {
          items.push(
            <span
              onClick$={() => {
                cart.push(item);
              }}
            >
              {item}
            </span>
          );
        }
        return items;
      }
      function loopForIn(results: string[]) {
        const items = [];
        for (const key in results) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[key]);
              }}
            >
              {results[key]}
            </span>
          );
        }
        return items;
      }
      function loopWhile(results: string[]) {
        const items = [];
        let i = 0;
        while (i < results.length) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[i]);
              }}
            >
              {results[i]}
            </span>
          );
          i++;
        }
        return items;
      }
      return (
        <div>
          {results.value.map((item) => (
            <button
              id="second"
              onClick$={() => {
                cart.push(item);
              }}
            >
              {item}
            </button>
          ))}
          {loopArrowFn(results.value)}
          {loopForI(results.value)}
          {loopForOf(results.value)}
          {loopForIn(results.value)}
          {loopWhile(results.value)}
        </div>
      );
    };
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    2370
  ]
}
*/
============================= test.tsx_App_component_button_q_e_click_cO5icSw7GDI.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_button_q_e_click_cO5icSw7GDI = () => {
	const cart = _captures[0];
	const item = _captures[1];
	cart.push(item);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_button_q_e_click_cO5icSw7GDI",
  "entry": null,
  "displayName": "test.tsx_App_component_button_q_e_click",
  "hash": "cO5icSw7GDI",
  "canonicalFilename": "test.tsx_App_component_button_q_e_click_cO5icSw7GDI",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "cart",
    "item"
  ],
  "loc": [
    2025,
    2081
  ]
}
*/
============================= test.tsx_App_component_loopForI_span_q_e_click_PbCYbPM6etI.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_loopForI_span_q_e_click_PbCYbPM6etI = () => {
	const cart = _captures[0];
	const i = _captures[1];
	const results = _captures[2];
	cart.push(results[i]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_loopForI_span_q_e_click_PbCYbPM6etI",
  "entry": null,
  "displayName": "test.tsx_App_component_loopForI_span_q_e_click",
  "hash": "PbCYbPM6etI",
  "canonicalFilename": "test.tsx_App_component_loopForI_span_q_e_click_PbCYbPM6etI",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "cart",
    "i",
    "results"
  ],
  "loc": [
    627,
    689
  ]
}
*/
============================= test.tsx_App_component_loopArrowFn_span_q_e_click_Wau7C836nf0.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_loopArrowFn_span_q_e_click_Wau7C836nf0 = () => {
	const cart = _captures[0];
	const item = _captures[1];
	cart.push(item);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_loopArrowFn_span_q_e_click_Wau7C836nf0",
  "entry": null,
  "displayName": "test.tsx_App_component_loopArrowFn_span_q_e_click",
  "hash": "Wau7C836nf0",
  "canonicalFilename": "test.tsx_App_component_loopArrowFn_span_q_e_click_Wau7C836nf0",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "cart",
    "item"
  ],
  "loc": [
    318,
    370
  ]
}
*/
============================= test.tsx_App_component_loopForOf_span_q_e_click_zlNGHYu926I.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_loopForOf_span_q_e_click_zlNGHYu926I = () => {
	const cart = _captures[0];
	const item = _captures[1];
	cart.push(item);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_loopForOf_span_q_e_click_zlNGHYu926I",
  "entry": null,
  "displayName": "test.tsx_App_component_loopForOf_span_q_e_click",
  "hash": "zlNGHYu926I",
  "canonicalFilename": "test.tsx_App_component_loopForOf_span_q_e_click_zlNGHYu926I",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "cart",
    "item"
  ],
  "loc": [
    979,
    1035
  ]
}
*/
== DIAGNOSTICS ==
[]
