crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_custom_inlined_functions.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { useMemoQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { wrap, useEffect } from "@qwik.dev/core";
//
const q_App_component_1_w0t0o3QMovU = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_1_w0t0o3QMovU"), "App_component_1_w0t0o3QMovU");
const q_Lightweight_useMemo_UIcxVTQF1a8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Lightweight_useMemo_UIcxVTQF1a8"), "Lightweight_useMemo_UIcxVTQF1a8");
//
export const useMemoQrl = (qrt) => {
	useEffect(qrt);
};
export const useMemo$ = wrap(useMemoQrl);
export const App = /*#__PURE__*/ componentQrl(q_App_component_1_w0t0o3QMovU);
export const Lightweight = (props) => {
	useMemoQrl(q_Lightweight_useMemo_UIcxVTQF1a8);
};

============================= test.tsx_App_component_useMemo_6Sc9KVki3Y0.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_useMemo_6Sc9KVki3Y0 = () => {
	const state = _captures[0];
	console.log(state.count);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_useMemo_6Sc9KVki3Y0",
  "entry": null,
  "displayName": "test.tsx_App_component_useMemo",
  "hash": "6Sc9KVki3Y0",
  "canonicalFilename": "test.tsx_App_component_useMemo_6Sc9KVki3Y0",
  "path": "",
  "extension": "js",
  "parent": "App_component_1_w0t0o3QMovU",
  "ctxKind": "function",
  "ctxName": "useMemo$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    259,
    307
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = () => (
		<div>{state.count}</div>
	);
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": "App_component_1_w0t0o3QMovU",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    317,
    357
  ]
}
*/
============================= test.tsx_Lightweight_useMemo_UIcxVTQF1a8.js (ENTRY POINT) ==
export const Lightweight_useMemo_UIcxVTQF1a8 = () => {
	console.log(state.count);
};

/*
{
  "origin": "test.tsx",
  "name": "Lightweight_useMemo_UIcxVTQF1a8",
  "entry": null,
  "displayName": "test.tsx_Lightweight_useMemo",
  "hash": "UIcxVTQF1a8",
  "canonicalFilename": "test.tsx_Lightweight_useMemo_UIcxVTQF1a8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "useMemo$",
  "captures": false,
  "loc": [
    405,
    453
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { useMemo$ } from "./test";
import { useStore } from "@qwik.dev/core";
export const App_component_1_w0t0o3QMovU = (props) => {
	const state = useStore({count: 0});
	useMemo$(() => {
		console.log(state.count);
	});
	return $(() => (
		<div>{state.count}</div>
	));
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    197,
    361
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
